--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,19 @@
-"dependencies": {
-  "next": "14.1.3",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "tailwindcss": "^3.4.4"
-},
-"devDependencies": {
-  "typescript": "^5.3.3"
+{
+  "name": "hitchmate-frontend",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "14.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  }
 }
