--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
     "typescript": "^5.3.3"
   }
 }
