--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,24 @@
 {
   "name": "hitchmate-backend",
-  "private": true,
+  "version": "1.0.0",
+  "description": "HitchMate Backend with NestJS",
   "scripts": {
-    "start": "nest start",
+    "build": "nest build",
+    "start": "node dist/main",
     "start:dev": "nest start --watch",
-    "format": "prettier --write "src/**/*.ts""
+    "start:prod": "node dist/main"
   },
   "dependencies": {
-    "@nestjs/common": "^10.3.0",
-    "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-express": "^10.3.0",
-    "@prisma/client": "^5.13.0",
-    "class-validator": "^0.15.0",
-    "class-transformer": "^0.5.1",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.0",
-    "@types/node": "^20.10.0",
-    "prisma": "^5.13.0",
-    "typescript": "^5.4.0"
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "typescript": "^5.0.0"
   }
 }
